# coffee-break

./: .gitignore  COPYING  README.md  meson.build  package-lock.json  package.json
data/: com.github.benavern.coffee-break.appdata.xml  com.github.benavern.coffee-break.desktop
debian/: changelog  control  copyright
icons/: icon.icns
src/: CoffeeWindow.vue  MainWindow.vue
src/pages/: Admin.vue  CoffeeTime.vue
